--- a/11-01-2023/AbsoluteRelativeURLs.html
+++ b/11-01-2023/AbsoluteRelativeURLs.html
@@ -19,8 +19,8 @@
 </head>
 <body>
     <h1>Absolute URLs:</h1>
-    <a href="https://www.google.com/">Google</a><br>
-    <a href="https://www.wikipedia.org/">Wikipedia</a><br>
+    <a href="https://www.google.com/" target="_blank">Google</a><br>
+    <a href="https://www.wikipedia.org/" target="_blank">Wikipedia</a><br>
     <h2>Relative URLs:</h2>
     <a href="aTag.html">Anchor tag</a><br>
     <a href="Bookmarks.html">Bookmarks</a><br>
