--- a/11-01-2023/aTag.html
+++ b/11-01-2023/aTag.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ancho Tag</title>
-    <!-- darkcyan -->
     <style>
         a{
             text-decoration: none;
@@ -26,7 +25,7 @@
         <li><a href="\11-01-2023\download.jpg">href</a></li>
         <li><a href="\10-01-2023\tag.html" hreflang="en">Tag Page</a></li>
         <li><a href="\10-01-2023\tag.html" media="print and (resolution:300dpi)">Media</a></li>
-        <li><a href="#" ping="#pingURL">Ping</a><span id="ping">0</span></li>
+        <li><a href="#" ping="#pingURL">Ping</a><span id="ping"></span></li>
         <li><a href="\10-01-2023\tag.html" target="_blank">Target</a></li>
         <li><a href="\10-01-2023\tag.html" type="text/html">Link</a></li>
     </ul>
