--- a/12-01-2023/SEO.html
+++ b/12-01-2023/SEO.html
@@ -84,6 +84,7 @@
             Google puts more weight on terms that appear at the top of a
             webpage.
           </dd>
+          <img src="google-puts-more-weight-on-terms-at-top-of-webpage-640x614.webp" alt="">
           <dt><h3>2. Write Unique Titles, Descriptions and Content</h3></dt>
           <dd>
             Avoiding duplicate content is one of the most important SEO best
@@ -91,6 +92,7 @@
 
             In fact, Google has stated that you should avoid “duplicate or
             near-duplicate versions of your content across your site.”<br />
+            <img src="avoid-duplicate-content-640x335.webp" alt="">
             And this rule applies to every piece of content on your website,
             including: <br />
             <ul>
@@ -117,6 +119,7 @@
               combining pages that have similar content together. Or use the
               canonical tag.
             </p>
+            <img src="use-canonical-tag-to-combine-pages-with-similar-content-640x591.webp" alt="">
           </dd>
           <dt><h3>3. Optimize Your Title Tag for SEO</h3></dt>
           <dd>
@@ -124,6 +127,7 @@
 
             Google has even said that: “it’s important to use high-quality
             titles on your web pages.”. <br />
+            <img src="high-quality-page-titles-640x210.webp" alt="">
             Here’s how to get the most out of your page’s title tag: <br />
 
             <b>Front-load Your Main Keyword:</b> “Front-load” simply means that
@@ -134,22 +138,26 @@
             Well, search engines pay close attention to the terms that you use
             in your title tag. This is why you want your keyword in your page
             title.<br />
+            <img src="include-your-main-keyword-in-title-tag-640x575.webp" alt="">
             But what you may not know is that Google also puts more emphasis
-            on<br />
-            words and phrases that show up early in your title tag. So if it
+            on
+            words and phrases that show up early in your title tag. <br/> 
+            <img src="emphasis-on-early-words-in-title-tag-640x351.webp" alt="">
+            So if it
             makes sense, start your title off with the keyword that you want to
             rank for.<br />
 
             For example, I currently rank #1 for the super competitive term
             “eCommerce SEO”.<br />
 
-            And my title tag starts off with that exact phrase. So if it makes
+            And my title tag starts off with that exact phrase.<br/>
+            <img src="ecommerce-seo-google-serp-640x475.webp" alt="">
+            So if it makes
             sense, start your title off with the keyword that you want to rank
             for.<br />
 
             For example, I currently rank #1 for the super competitive term
             “eCommerce SEO”.<br />
-
             And my title tag starts off with that exact phrase.<br />
             Sometimes it’s not possible to use your keyword that early on
             because it will make your title tag look weird. Yes, search engine
