--- a/13-01-2023/FavoriteLeastFavorite.html
+++ b/13-01-2023/FavoriteLeastFavorite.html
@@ -46,7 +46,7 @@
       </tr>
       <tr>
         <th>Flavor</th>
-        <td>anana</td>
+        <td>Banana</td>
         <td>Chocolate</td>
       </tr>
       <tr>
