--- a/13-01-2023/Invoice.html
+++ b/13-01-2023/Invoice.html
@@ -66,7 +66,7 @@
         <td>42.76</td>
       </tr>
       <tr>
-        <th colspan="3">total</th>
+        <th colspan="3">Total</th>
         <td>653.64</td>
       </tr>
     </table>
