--- a/13-01-2023/Invoice123.html
+++ b/13-01-2023/Invoice123.html
@@ -27,7 +27,7 @@
         margin-right: auto;
       }
     </style>
-    <title>Document</title>
+    <title>Invoice#123456789</title>
   </head>
   <body>
     <table>
@@ -38,7 +38,7 @@
       <tr>
         <td colspan="2">
           <p>Pay To:</p>
-          <br />Ace Billing Co. <br />
+          <br />Acme Billing Co. <br />
           123 Main St. <br />
           Cityville, NA 12345
         </td>
