--- a/13-01-2023/Invoice123.html
+++ b/13-01-2023/Invoice123.html
@@ -21,6 +21,8 @@
       }
       p {
         font-weight: 700;
+        padding: 0;
+        margin: 0;
       }
       table {
         margin-left: auto;
@@ -38,13 +40,13 @@
       <tr>
         <td colspan="2">
           <p>Pay To:</p>
-          <br />Acme Billing Co. <br />
+          Acme Billing Co. <br />
           123 Main St. <br />
           Cityville, NA 12345
         </td>
         <td colspan="2">
           <p>Customer:</p>
-          <br />John Smith <br />
+          John Smith <br />
           321 Willow Way <br />
           Southeast Northwestershire, MA 54321
         </td>
